overflow fixes

--- a/calendar/calendar.css
+++ b/calendar/calendar.css
@@ -1,3 +1,7 @@
+body {
+    overflow: visible !important;
+}
+
 #calendar-page {
     padding: 15px;
     /*width: 100%;*/
