--- a/members/members.css
+++ b/members/members.css
@@ -13,22 +13,6 @@ body {
     font-family: Avenir Next;
 }
 
-/*#notifications {
-    line-height: normal;
-    font-family: Avenir Next;
-    padding-top: 20px;
-    font-size: 25px;
-    color: #333333;
-}
-
-#notifications h1 {
-    line-height: normal;
-    font-family: Avenir Next;
-    font-size: 25px;
-    color: #333333;
-}*/
-
-
 #team-page .actions-bar {
     margin-left: 4px;
 }
