--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
 	/*width: 100%;*/
 	/*width: 100vw;*/
 	height: 100%;
-	/*overflow: hidden;*/
+	overflow: hidden;
 }
 
 h1 {
